--- a/public/newnav.css
+++ b/public/newnav.css
@@ -23,7 +23,7 @@ header::after {
     font-size: 1.5em;
     font-family: 'Krona One', sans-serif;
 }
-.site-nav {
+.site-nav, .short-nav {
     position: absolute;
     top: 100%;
     right: 0%;
@@ -36,18 +36,21 @@ header::after {
  
 }
 
-.open .site-nav {
+.open .site-nav,
+.open .short-nav {
     clip-path: circle(250% at top right);
 }
 
-.site-nav ul {
+.site-nav ul,
+.short-nav ul,
+.side-menu ul {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.site-nav button {
-
+.site-nav button,
+.short-nav button {
     width: 11em;
     background-color: #262525;
     color: #f9f9f9;
@@ -57,12 +60,15 @@ header::after {
 
 }
 
-.site-nav li:last-child {
+.site-nav li:last-child,
+.short-nav li:last-child {
     border-bottom: none;
 }
 
 .site-nav button:hover,
-.site-nav button:focus {
+.site-nav button:focus,
+.short-nav button:hover,
+.short-nav button:focus {
     background-color: #f9f9f9;
     color: #262525;
 }
@@ -108,6 +114,77 @@ header::after {
     transform: translateY(-3px) rotate(-90deg);
 }
 
+.side-menu, .short-nav {
+    display: none;
+}
+
+.help {
+    grid-column: 1/3;
+}
+
+.only-portrait {
+    display: block;
+}
+
+@media (orientation: landscape) {
+    .site-nav, .not-in-landscape {
+        display: none
+    }
+
+    .side-menu,
+    .short-nav {
+        display: inline;
+    }
+
+    .sections-container  {
+        max-width: 100%;
+        display: grid;
+        grid-column-gap: 10px;
+        grid-template-columns: 1fr 4fr;
+    }
+
+    .intro {
+        grid-column: 2/3;
+    }
+
+    .js-form {
+        grid-column: 2/3;
+
+    }
+
+    .intro footer {
+        grid-column: 2/3;
+
+    }
+
+    .only-portrait {
+        display: none;
+    }
+
+    .side-menu {
+            font-family: 'Cabin',
+            sans-serif;
+            grid-column: 1/2;
+            grid-row: 1/4;
+            margin-top: 3.7em;
+            height: 100%;
+            position: fixed;
+            background: #4f323b;
+          
+    }
+
+    .side-menu button {
+        min-width: 8.5em;
+        background: transparent;
+        color: white;
+        font-family: 'Ramabhadra',
+        sans-serif;
+        padding: .2em .9em;
+        border: none;
+    }
+
+}
+
 @media (min-width: 700px) {
 
     .menu-toggle {
@@ -115,8 +192,6 @@ header::after {
     }
 
     .site-nav {
-        /* display: block; */
-
         height: auto;
         position: relative;
         background: transparent;
