--- a/public/main.css
+++ b/public/main.css
@@ -12,7 +12,7 @@ body {
     /* font-family: 'Rubik', sans-serif; */
     font-family: 'Noto Sans JP', sans-serif;
     overflow: auto;
-    background-color: #f5fac7;
+    background-color: #f2f7ff;
     /* padding-bottom: 2em; */
     margin: auto;
 }
@@ -611,7 +611,6 @@ select {
     width: 100%;
 }
 
-
 .red {
     box-shadow: 3px 6px #E81D2E;
 }
@@ -668,7 +667,6 @@ select {
     font-size: 1.2em;
 }
 
-
 @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
         transform: translateY(0);
@@ -680,7 +678,6 @@ select {
         transform: translateY(-15px);
     }
 }
-
 
 .tooltip {
     position: relative;
@@ -742,12 +739,9 @@ select {
 }
 
 @media (orientation: landscape) {
-
-
     .form {
         margin-top: 2.5em;
     }
-
     form input {
         width: 50%;
         margin-right: 1em;
@@ -764,71 +758,49 @@ select {
     .grid-container {
         width: 100%;
         margin-left: 0;
-
     }
-  
-
     .results h1 {
         margin: .2em 1.9em;
         text-align: center;
     }
-
     .intro h1 {
         margin-top: 2em;
     }
-
-    .results .goto-edit,
-    .results .delete-btn {
+    .results .goto-edit, .results .delete-btn {
         width: 30%;
     }
-
     .intro p, .help p {
         width: 100%;
     }
-
     .go-up p:nth-child(1) {
         top: 18%;
         left: 80%;
-   
     }
     footer p {
         margin-top: 0;
     }
-
     .login-form {
         margin-top: 5em;
         font-size: .9em;
     }
-
-    .list-results,
-    .results {
+    .list-results, .results {
         position: static;
         grid-column: 2/3;
         margin: 5em auto 1em;
         padding: 0;
     }
-
-   
-
-    .signup-form button, 
-    .login-form button {
+    .signup-form button, .login-form button {
         display: inline-block;
         margin-top: 0;
         margin-left: .4em;
-
     }
-
     .signup-form legend {
         float: right;
     }
-
     .signup-form label {
         font-size: 1em;
     }
-
-    #name,
-    #email,
-    #employerName {
+    #name, #email, #employerName {
         width: 60%;
         font-size: .9em;
     }
@@ -841,7 +813,6 @@ select {
     table {
         margin: 5% 10% 2% 10%;
         width: 80%;
-        
     }
     .enter {
         margin: 5%;
@@ -851,7 +822,6 @@ select {
         width: 60%;
         top: 5em;
         font-size: 1.4em;
-
     }
     .info-window p {
         text-align: center;
@@ -865,23 +835,21 @@ select {
         margin-left: 5%;
         margin-right: 5%;
     }
-
-    .close,
-    .clear {
+    .close, .clear {
         margin-top: .5em;
         font-size: 1.2em;
     }
 }
 
 @media (min-width: 550px) {
-    /* .results {
-        padding: 0;
-        top: 11em;
-        left: 15%;
-    } */
     .employee-form, .info-container {
-        margin: auto;
         width: 70%;
+    }
+    .employee-form {
+        margin: 1em auto;
+    }
+    .info-container {
+        margin: auto;
     }
     img {
         position: relative;
@@ -897,8 +865,14 @@ select {
 }
 
 @media (min-width: 800px) {
+    body {
+        font-size: 1.4em;
+    }
+    .info-container {
+        width: 60%;
+    }
+
     .info-container p:first-child {
-       
         font-size: 1.9em;
     }
     .results {
@@ -910,5 +884,12 @@ select {
         left: 10%;
         top: 1%;
         font-size: 2.2em;
+    }
+    .tooltip .tooltiptext {
+        width: 500px;
+    }
+    .fa-info-circle .tooltiptext {
+        left: -500%;
+        top: -600%;
     }
 }
