--- a/public/newnav.css
+++ b/public/newnav.css
@@ -122,7 +122,7 @@ header::after {
     grid-column: 1/3;
 }
 
-.only-portrait {
+.not-in-landscape {
     display: block;
 }
 
@@ -149,12 +149,10 @@ header::after {
 
     .js-form {
         grid-column: 2/3;
-
     }
 
     footer {
         grid-column: 2/3;
-
     }
 
     .only-portrait {
@@ -168,28 +166,25 @@ header::after {
         grid-row: 1/4;
         margin-top: 3.7em;
         height: 100%;
+        width: 20%;
         position: fixed;
         background: #4aa6b5;
           
     }
 
     .side-menu button {
-        min-width: 8.5em;
+        font-size: .98em;
         background: transparent;
         color: white;
         font-family: 'Ramabhadra',
         sans-serif;
-        padding: .2em .9em;
+        padding: .35em 1em;
         border: none;
     }
 
 }
 
 @media (min-width: 700px) {
-
-    .menu-toggle {
-        display: none;
-    }
 
     .site-nav {
         height: auto;
@@ -203,11 +198,6 @@ header::after {
         display: inline-block;
         border: none;
     }
-    .side-menu button {
-        min-width: 10em;
-        font-size: 1.5em;
-    }
-
 
     .site-nav button {
         padding: 0;
@@ -229,15 +219,9 @@ header::after {
 
 }
 
-
-  
-    
-
-@media (min-width: 905px) {
+@media (min-width: 900px) {
     .site-nav button {
         width: 6em;
          padding-top: 1.5em;
     }
-
-
 }
