Add meadia querie 700px

--- a/public/main.css
+++ b/public/main.css
@@ -862,7 +862,7 @@ select {
     }
 }
 
-@media (min-width: 550px) {
+@media only screen and (min-width: 550px) {
     .employee-form, .info-container {
         width: 70%;
     }
@@ -885,7 +885,7 @@ select {
     }
 }
 
-@media (min-width: 700px) {
+@media only screen and (min-width: 700px) {
     body {
         font-size: 1.3em;
     }
@@ -918,7 +918,7 @@ select {
     }
 }
 
-    @media (min-width: 900px) {
+    @media only screen and (min-width: 800px) {
        body{
            font-size: 1.5em;
        }
