--- a/public/newnav.css
+++ b/public/newnav.css
@@ -122,7 +122,7 @@ header::after {
     display: block;
 }
 
-@media (orientation: landscape) {
+@media only screen and (orientation: landscape) {
     .site-nav, .not-in-landscape {
         display: none
     }
@@ -174,13 +174,13 @@ header::after {
         color: white;
         font-family: 'Ramabhadra',
         sans-serif;
-        padding: .35em 1em;
+        padding: .25em 1em;
         border: none;
     }
 
 }
 
-@media (min-width: 700px) {
+@media only screen and (min-width: 700px) {
 
     .site-nav {
         height: auto;
@@ -215,7 +215,7 @@ header::after {
 
 }
 
-@media (min-width: 900px) {
+@media only screen and (min-width: 900px) {
     .site-nav button {
         width: 6em;
          padding-top: 1.5em;
