Make render list after updating an employee.

--- a/public/main.css
+++ b/public/main.css
@@ -837,6 +837,7 @@ select {
     }
     .info-window p {
         text-align: center;
+        text-transform: capitalize;
     }
     .create-form p:nth-child(1) {
         top: 32%;
