--- a/public/navbar.css
+++ b/public/navbar.css
@@ -30,8 +30,6 @@ header::after {
     background: #464655;
     height: 0px;
     overflow: hidden;
-    /* clip-path: circle(0px at top right); */
-    /* transition: clip-path ease-in-out 500ms; */
     font-family: 'Cabin',
     sans-serif;
  
@@ -40,7 +38,6 @@ header::after {
 .open .site-nav,
 .open .short-nav {
     height: auto;
-    /* clip-path: circle(250% at top right); */
 }
 
 .site-nav ul,
@@ -170,9 +167,7 @@ header::after {
         font-size: .98em;
         background: transparent;
         color: white;
-        font-family: 'Ramabhadra',
-        sans-serif;
-        padding: .25em 1em;
+        padding: 1em .4em;
         border: none;
     }
 
@@ -211,7 +206,6 @@ screen and (min-width: 880px) {
     .site-nav--icon {
         display: none;
     }
-
 }
 
 @media only screen and (min-width: 900px) {
